# amqpprox

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  COPYRIGHT  Dockerfile  Doxygen.config  Makefile  README.md
.github/workflows/: main.yml  scorecard.yml
amqpprox/: CMakeLists.txt  amqpprox.m.cpp
amqpprox_ctl/: CMakeLists.txt  client.m.cpp
authproto/: CMakeLists.txt  README.md  authrequest.proto  authresponse.proto  sasl.proto
buildfiles/: README.md
buildfiles/conan/: Dockerfile  README.md  amqpprox.pre.cmake  amqpprox_ctl.pre.cmake  bootstrap  clang.Dockerfile  conanfile.txt  gcc.Dockerfile  integration.Dockerfile  libamqpprox.post.cmake  libamqpprox.pre.cmake  main.pre.cmake  tests.pre.cmake
docs/: architecture.md  config.md  handshake.md  sessions.md  thanks.md  tls.md
libamqpprox/: CMakeLists.txt  amqpprox_affinitypartitionpolicy.cpp  amqpprox_affinitypartitionpolicy.h  amqpprox_authcontrolcommand.cpp  amqpprox_authcontrolcommand.h  amqpprox_authinterceptinterface.cpp  amqpprox_authinterceptinterface.h  amqpprox_authrequestdata.cpp  amqpprox_authrequestdata.h  amqpprox_authresponsedata.cpp  amqpprox_authresponsedata.h  amqpprox_backend.cpp  amqpprox_backend.h  amqpprox_backendcontrolcommand.cpp  amqpprox_backendcontrolcommand.h  amqpprox_backendselector.cpp  amqpprox_backendselector.h  amqpprox_backendselectorstore.cpp  amqpprox_backendselectorstore.h  amqpprox_backendset.cpp  amqpprox_backendset.h  amqpprox_backendstore.cpp  amqpprox_backendstore.h  amqpprox_buffer.cpp  amqpprox_buffer.h  amqpprox_bufferhandle.cpp  amqpprox_bufferhandle.h  amqpprox_bufferpool.cpp  amqpprox_bufferpool.h  amqpprox_buffersource.cpp  amqpprox_buffersource.h  amqpprox_closeerror.cpp  amqpprox_closeerror.h  amqpprox_connectionlimiterinterface.cpp  amqpprox_connectionlimiterinterface.h  amqpprox_connectionlimitermanager.cpp  amqpprox_connectionlimitermanager.h  amqpprox_connectionmanager.cpp  amqpprox_connectionmanager.h  amqpprox_connectionscontrolcommand.cpp  (+159 more)
tests/: CMakeLists.txt  amqpprox_affinitypartitionpolicy.t.cpp  amqpprox_backend.t.cpp  amqpprox_backendselectorstore.t.cpp  amqpprox_backendstore.t.cpp  amqpprox_buffer.t.cpp  amqpprox_bufferhandle.t.cpp  amqpprox_bufferpool.t.cpp  amqpprox_buffersource.t.cpp  amqpprox_connectionlimitermanager.t.cpp  amqpprox_connectionselector.t.cpp  amqpprox_connectionstats.t.cpp  amqpprox_dataratelimit.t.cpp  amqpprox_defaultauthintercept.t.cpp  amqpprox_dnsresolver.t.cpp  amqpprox_eventsourcesignal.t.cpp  amqpprox_farmstore.t.cpp  amqpprox_fixedwindowconnectionratelimiter.t.cpp  amqpprox_flowtype.t.cpp  amqpprox_frame.t.cpp  amqpprox_httpauthintercept.t.cpp  amqpprox_mappingconnectionselector.t.cpp  amqpprox_maybesecuresocketadaptor.t.cpp  amqpprox_methods_start.t.cpp  amqpprox_packetprocessor.t.cpp  amqpprox_partitionpolicystore.t.cpp  amqpprox_proxyprotocolheaderv1.t.cpp  amqpprox_resourcemapper.t.cpp  amqpprox_robinbackendselector.t.cpp  amqpprox_session.t.cpp  amqpprox_sessionstate.t.cpp  amqpprox_socketintercepttestadaptor.cpp  amqpprox_socketintercepttestadaptor.h  amqpprox_statcollector.t.cpp  amqpprox_statsnapshot.t.cpp  amqpprox_testsocketstate.cpp  amqpprox_testsocketstate.h  amqpprox_totalconnectionlimiter.t.cpp  amqpprox_types.t.cpp  amqpprox_vhoststate.t.cpp
tests/acceptance/: connection.robot  run.sh  smoke.robot
tests/acceptance/integration/: brokenconnections.js  consumers.js  failedconnections.js  full-definitions.json  index.js  package.json  proxy.js  publishers.js  rabbitmq1.config  rabbitmq2.config  setup.sh  shovel_queues.js  stats.js  switch.sh  testutil.js
tests/acceptance/libs/: AMQPClient.robot  AMQPProx.robot  AMQPProxCTL.robot  Consumer.robot  RabbitMQ.robot  __init__.py
tests/acceptance/libs/amqp_client/: __init__.py  connection.py  connection_close.py
tests/acceptance/libs/rabbitclient/: __init__.py  consumer.py
tests/performance_tester/: Cargo.toml  README.md  integration-tests.py
tests/performance_tester/src/: async_client.rs  client.rs  main.rs  server.rs
