include("${BUILD_FLAVOUR_DIR}/libamqpprox.pre.cmake" OPTIONAL)

add_library(libamqpprox STATIC
    amqpprox_affinitypartitionpolicy.cpp
    amqpprox_backend.cpp
    amqpprox_backendcontrolcommand.cpp
    amqpprox_backendselector.cpp
    amqpprox_backendselectorstore.cpp
    amqpprox_backendset.cpp
    amqpprox_backendstore.cpp
    amqpprox_buffer.cpp
    amqpprox_bufferhandle.cpp
    amqpprox_bufferpool.cpp
    amqpprox_buffersource.cpp
    amqpprox_connectionmanager.cpp
    amqpprox_connectionselectorinterface.cpp
    amqpprox_connectionscontrolcommand.cpp
    amqpprox_connectionstats.cpp
    amqpprox_connector.cpp
    amqpprox_connectorutil.cpp
    amqpprox_constants.cpp
    amqpprox_control.cpp
    amqpprox_cpumonitor.cpp
    amqpprox_datacenter.cpp
    amqpprox_datacentercontrolcommand.cpp
    amqpprox_dataratelimit.cpp
    amqpprox_dataratelimitmanager.cpp
    amqpprox_dnshostnamemapper.cpp
    amqpprox_dnsresolver.cpp
    amqpprox_eventsource.cpp
    amqpprox_eventsourcesignal.cpp
    amqpprox_exitcontrolcommand.cpp
    amqpprox_farm.cpp
    amqpprox_farmcontrolcommand.cpp
    amqpprox_farmstore.cpp
    amqpprox_fieldtable.cpp
    amqpprox_fieldvalue.cpp
    amqpprox_flowtype.cpp
    amqpprox_frame.cpp
    amqpprox_helpcontrolcommand.cpp
    amqpprox_hostnamemapper.cpp
    amqpprox_humanstatformatter.cpp
    amqpprox_jsonstatformatter.cpp
    amqpprox_listencontrolcommand.cpp
    amqpprox_logging.cpp
    amqpprox_loggingcontrolcommand.cpp
    amqpprox_mapcontrolcommand.cpp
    amqpprox_maphostnamecontrolcommand.cpp
    amqpprox_connectionselector.cpp
    amqpprox_maybesecuresocketadaptor.cpp
    amqpprox_method.cpp
    amqpprox_packetprocessor.cpp
    amqpprox_partitionpolicy.cpp
    amqpprox_partitionpolicystore.cpp
    amqpprox_proxyprotocolheaderv1.cpp
    amqpprox_reply.cpp
    amqpprox_resourcemapper.cpp
    amqpprox_robinbackendselector.cpp
    amqpprox_server.cpp
    amqpprox_serverutil.cpp
    amqpprox_session.cpp
    amqpprox_sessioncleanup.cpp
    amqpprox_sessioncontrolcommand.cpp
    amqpprox_sessionstate.cpp
    amqpprox_socketintercept.cpp
    amqpprox_socketinterceptinterface.cpp
    amqpprox_statcollector.cpp
    amqpprox_statcontrolcommand.cpp
    amqpprox_statformatter.cpp
    amqpprox_statsdpublisher.cpp
    amqpprox_statsnapshot.cpp
    amqpprox_tlscontrolcommand.cpp
    amqpprox_tlsutil.cpp
    amqpprox_types.cpp
    amqpprox_vhostcontrolcommand.cpp
    amqpprox_vhostestablishedpauser.cpp
    amqpprox_vhoststate.cpp
    amqpprox_methods_close.cpp
    amqpprox_methods_closeok.cpp
    amqpprox_methods_open.cpp
    amqpprox_methods_openok.cpp
    amqpprox_methods_tune.cpp
    amqpprox_methods_tuneok.cpp
    amqpprox_methods_start.cpp
    amqpprox_methods_startok.cpp
    amqpprox_authinterceptinterface.cpp
    amqpprox_defaultauthintercept.cpp
    amqpprox_httpauthintercept.cpp
    amqpprox_authcontrolcommand.cpp
    amqpprox_connectionlimiterinterface.cpp
    amqpprox_connectionlimitermanager.cpp
    amqpprox_fixedwindowconnectionratelimiter.cpp
    amqpprox_limitcontrolcommand.cpp
    amqpprox_closeerror.cpp)

target_include_directories(libamqpprox PRIVATE ${PROTO_HDR_PATH})
target_link_libraries(libamqpprox LINK_PUBLIC authproto ${LIBAMQPPROX_LIBS})

include("${BUILD_FLAVOUR_DIR}/libamqpprox.post.cmake" OPTIONAL)
